--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
     </ItemGroup>
 
