--- a/UserService/docker-compose.yml
+++ b/UserService/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   user-database:
     image: postgres:17
   env_file:
-    - database/.env
+    - "database/.env"
   volumes:
-    - user-db-data:/var/lib/postgresql/data
-    - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-  port:
+    - "user-db-data:/var/lib/postgresql/data"
+    - "./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro"
+  ports:
     - "5432:5432"  # После дебагу удалить эту хуйню
   healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
