fix(docker): build for arch amd64

--- a/UserService/Dockerfile
+++ b/UserService/Dockerfile
@@ -1,5 +1,6 @@
 # Stage 1: Only for build
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG TARGETPLATFORM
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 
 WORKDIR /app
 
@@ -7,10 +8,11 @@ COPY UserService.csproj ./
 RUN dotnet restore UserService.csproj
 
 COPY . .
-RUN dotnet publish -c Release -o /app/publish
+ARG TARGETARCH
+RUN dotnet publish -a $TARGETARCH -c Release -o /app/publish
 
 # Stage 2: Runtime
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "UserService.dll"]
