--- a/UserService/Database/.env
+++ b/UserService/Database/.env
@@ -1,5 +1,4 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_PORT=
-PGDATA=
+POSTGRES_DB=users
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_PORT=5432
