--- a/UserService/docker-compose.yml
+++ b/UserService/docker-compose.yml
@@ -1,24 +1,27 @@
 services:
   user-database:
     image: postgres:17
-  env_file:
-    - "database/.env"
-  volumes:
-    - "user-db-data:/var/lib/postgresql/data"
-    - "./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro"
-  ports:
-    - "5432:5432"  # После дебагу удалить эту хуйню
-  healthcheck:
+    env_file:
+      - Database/.env
+    volumes:
+      - user-db-data:/var/lib/postgresql/data
+      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    ports:
+      - "5432:5432" # убрать потом
+    healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
-  restart: unless-stopped
+    restart: unless-stopped
 
   user-service:
     build:
       context: .
+    platform: linux/amd64
+    env_file:
+      - database/.env
     environment:
       ASPNETCORE_URLS: "http://+:5002"
       ConnectionStrings__Default: "Host=user-database;Database=$${POSTGRES_DB};Username=$${POSTGRES_USER};Password=$${POSTGRES_PASSWORD}"
@@ -27,7 +30,7 @@ services:
     depends_on:
       user-database:
         condition: service_healthy
-
+    restart: unless-stopped
 
 volumes:
   user-db-data:
