--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -10,5 +10,8 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "DatabaseSettings": {
+    "ConnectionString": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=users;"
   }
 }
