--- a/UserService/docker-compose.yml
+++ b/UserService/docker-compose.yml
@@ -1,13 +1,14 @@
 services:
-  user-database:
+  user-db-service:
     image: postgres:17
-    env_file:
-      - Database/.env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - user-db-data:/var/lib/postgresql/data
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     ports:
-      - "5432:5432" # убрать потом
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
@@ -16,20 +17,34 @@ services:
       start_period: 10s
     restart: unless-stopped
 
+
+  user-db-migrations:
+    image: flyway/flyway:10
+    environment:
+      FLYWAY_URL: jdbc:postgresql://user-db-service:5432/${POSTGRES_DB}
+      FLYWAY_USER: ${POSTGRES_USER}
+      FLYWAY_PASSWORD: ${POSTGRES_PASSWORD}
+      FLYWAY_LOCATIONS: filesystem:/migrations
+      FLYWAY_CLEAN_DISABLED: false
+    volumes:
+      - ./Database/sql/migrations:/migrations:ro
+    command: ${FLYWAY_MIGRATION_MODE:-migrate}
+    depends_on:
+      user-db-service:
+        condition: service_healthy
+      
+
   user-service:
     build:
       context: .
     platform: linux/amd64
-    env_file:
-      - database/.env
     environment:
       ASPNETCORE_URLS: "http://+:5002"
-      ConnectionStrings__Default: "Host=user-database;Database=$${POSTGRES_DB};Username=$${POSTGRES_USER};Password=$${POSTGRES_PASSWORD}"
     ports:
       - "5002:5002"
     depends_on:
-      user-database:
-        condition: service_healthy
+      user-db-migrations:
+        condition: service_completed_successfully
     restart: unless-stopped
 
 volumes:
