fix: appsettings.json

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -12,6 +12,6 @@
     }
   },
   "DatabaseSettings": {
-    "ConnectionString": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=users;"
+    "ConnectionString": "User ID=postgres;Password=postgres;Host=user-db-service;Port=5432;Database=user-db;"
   }
 }
