--- a/RateLimiter.Writer/RateLimiter.Writer.csproj
+++ b/RateLimiter.Writer/RateLimiter.Writer.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+        <PackageReference Include="Riok.Mapperly" Version="4.2.1" />
     </ItemGroup>
 
 </Project>
