feat(RateLimiter.Writer): add repository

--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -10,5 +10,9 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "MongoSettings": {
+    "MongoUri": "mongodb://mongo:password@rate-limits-db-service:27017",
+    "Database": "rate_limits"
   }
 }
