--- a/RateLimiter.Writer/docker-compose.yml
+++ b/RateLimiter.Writer/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       context: .
     platform: linux/amd64
     environment:
-      MONGO_URI: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
+      MongoSettings__MongoDbUri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
+      MongoSettings__Database: "rate_limits"
     ports:
       - "5003:5002"
       
