fix(RateLimiter.Writer): repo issues

--- a/RateLimiter.Writer/RateLimiter.Writer.csproj
+++ b/RateLimiter.Writer/RateLimiter.Writer.csproj
@@ -16,4 +16,8 @@
         <PackageReference Include="Riok.Mapperly" Version="4.2.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="src\Services\Extensions\" />
+    </ItemGroup>
+
 </Project>
