--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "MongoSettings": {
-    "MongoUri": "mongodb://mongo:password@rate-limits-db-service:27017",
+    "Uri": "mongodb://mongo:password@localhost:5433",
     "Database": "rate_limits"
   }
 }
