--- a/RateLimiter.Writer/docker-compose.yml
+++ b/RateLimiter.Writer/docker-compose.yml
@@ -10,12 +10,12 @@ services:
       - rate-limits-db-data:/data/db
   
   
-  rate-limiter-service:
+  rate-limits-service:
     build:
       context: .
     platform: linux/amd64
     environment:
-      MongoSettings__MongoDbUri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
+      MongoSettings__Uri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
       MongoSettings__Database: "rate_limits"
     ports:
       - "5003:5002"
