--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -11,7 +11,7 @@
       "Protocols": "Http2"
     }
   },
-  "MongoSettings": {
+  "DatabaseSettings": {
     "Uri": "mongodb://mongo:password@localhost:5433",
     "Database": "rate_limits"
   }
