refactor: db elements naming

--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -13,6 +13,6 @@
   },
   "DatabaseSettings": {
     "Uri": "mongodb://mongo:password@localhost:5433",
-    "Database": "rate_limits"
+    "Database": "rateLimiterDB"
   }
 }
