--- a/RateLimiter.Writer/docker-compose.yml
+++ b/RateLimiter.Writer/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     platform: linux/amd64
     environment:
       MongoSettings__Uri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
-      MongoSettings__Database: "rate_limits"
+      MongoSettings__Database: "rateLimiterDB"
     ports:
       - "5003:5002"
       
