fix: db settings

--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "DatabaseSettings": {
-    "Uri": "mongodb://mongo:password@localhost:5433",
+    "Uri": "mongodb://mongo:password@rate-limits-db-service:27017",
     "Database": "rateLimiterDB"
   }
 }
