--- a/RateLimiter.Writer/RateLimiter.Writer.csproj
+++ b/RateLimiter.Writer/RateLimiter.Writer.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="Riok.Mapperly" Version="4.2.1" />
