feat: init repository

--- a/RateLimiter.Reader/appsettings.json
+++ b/RateLimiter.Reader/appsettings.json
@@ -10,5 +10,9 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "DatabaseSettings": {
+    "Uri": "mongodb://mongo:password@rate-limits-db-service:27017",
+    "Database": "rateLimiterDB"
   }
 }
