--- a/RateLimiter.Reader/RateLimiter.Reader.csproj
+++ b/RateLimiter.Reader/RateLimiter.Reader.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Confluent.Kafka" Version="2.11.1" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+        <PackageReference Include="Riok.Mapperly" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
