--- a/RateLimiter.Reader/appsettings.json
+++ b/RateLimiter.Reader/appsettings.json
@@ -13,6 +13,8 @@
   },
   "DatabaseSettings": {
     "Uri": "mongodb://mongo:password@rate-limits-db-service:27017",
-    "Database": "rateLimiterDB"
+    "Database": "rateLimiterDB",
+    "CollectionName": "rateLimits",
+    "BatchSize": 1000
   }
 }
