refactor: move collection name setting to appsettings.json

--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -13,6 +13,7 @@
   },
   "DatabaseSettings": {
     "Uri": "mongodb://mongo:password@rate-limits-db-service:27017",
-    "Database": "rateLimiterDB"
+    "Database": "rateLimiterDB",
+    "CollectionName": "rateLimits"
   }
 }
