--- a/RateLimiter.Writer/docker-compose.yml
+++ b/RateLimiter.Writer/docker-compose.yml
@@ -1,6 +1,10 @@
+volumes:
+  rate-limits-db-data:
+
 services:
-  rate-limits-db-service:
+  limits-db:
     image: mongodb/mongodb-community-server:7.0.24-rc0-ubi8
+    container_name: highload_limits_db
     ports: 
       - "5433:27017"
     environment:
@@ -8,17 +12,24 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: "${MONGO_PASSWORD}"
     volumes:
       - rate-limits-db-data:/data/db
+    networks: 
+      - highload
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
   
   
-  rate-limits-writer-service:
+  limits-writer:
     build:
       context: .
+    container_name: highload_limits_writer
     platform: linux/amd64
     environment:
       DatabaseSettings__Uri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
       DatabaseSettings__Database: "rateLimiterDB"
     ports:
       - "5001:5001"
-      
-volumes:
-  rate-limits-db-data:
+    networks: 
+      - highload
+    depends_on:
+      limits-db: 
+        condition: service_healthy
