--- a/RateLimiter.Reader/docker-compose.yml
+++ b/RateLimiter.Reader/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: highload_limits_reader
     platform: linux/amd64
     environment:
-      DatabaseSettings__Uri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@rate-limits-db-service:27017"
+      DatabaseSettings__Uri: "mongodb://${MONGO_USER}:${MONGO_PASSWORD}@limits-db:27017"
       DatabaseSettings__Database: "rateLimiterDB"
     ports:
       - "4999:5000"
