--- a/UserRequestsKafkaGenerator/UserRequestsKafkaGenerator.csproj
+++ b/UserRequestsKafkaGenerator/UserRequestsKafkaGenerator.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" Version="2.11.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
     </ItemGroup>
 
 </Project>
