fix: appsettings.json

--- a/UserRequestsKafkaGenerator/appsettings.json
+++ b/UserRequestsKafkaGenerator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "KafkaSettings": {
-    "BootstrapServers": "localhost:9092",
+    "BootstrapServers": "highload_kafka:9092",
     "Topic": "user_events"
   }
 }
