feat: add UserRequest contract

--- a/UserRequestsKafkaGenerator/appsettings.json
+++ b/UserRequestsKafkaGenerator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "KafkaSettings": {
     "BootstrapServers": "highload_kafka:9092",
-    "Topic": "user_events"
+    "Topic": "user_requests"
   }
 }
