--- a/RateLimiter.Reader/appsettings.json
+++ b/RateLimiter.Reader/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "DatabaseSettings": {
-    "Uri": "mongodb://mongo:password@rate-limits-db-service:27017",
+    "Uri": "mongodb://limits-db:27017/?replicaSet=rs0",
     "Database": "rateLimiterDB",
     "CollectionName": "rateLimits",
     "BatchSize": 1000
