feat: add configuring schedules from appsettings.json

--- a/UserRequestsKafkaGenerator/appsettings.json
+++ b/UserRequestsKafkaGenerator/appsettings.json
@@ -2,5 +2,19 @@
   "KafkaSettings": {
     "BootstrapServers": "highload_kafka:9092",
     "Topic": "user_requests"
+  },
+  "UserScheduleOptions": {
+    "Schedules": [
+      {
+        "UserId": 123,
+        "Endpoint": "GetUserById",
+        "Rpm": 10
+      },
+      {
+        "UserId": 321,
+        "Endpoint": "UpdateUser",
+        "Rpm": 5
+      }
+    ]
   }
 }
