--- a/UserRequestsKafkaGenerator/Dockerfile
+++ b/UserRequestsKafkaGenerator/Dockerfile
@@ -12,7 +12,7 @@ ARG TARGETARCH
 RUN dotnet publish -a $TARGETARCH -c Release -o /app/publish
 
 # Stage 2: Runtime
-FROM mcr.microsoft.com/dotnet/runtime:9.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "UserRequestsKafkaGenerator.dll"]
