--- a/RateLimiter.Reader/docker-compose.yml
+++ b/RateLimiter.Reader/docker-compose.yml
@@ -14,3 +14,8 @@ services:
     depends_on:
       limits-db: 
         condition: service_healthy
+
+  redis:
+    image: redis:bookworm
+    ports:
+      - "6379:6379"
