--- a/RateLimiter.Reader/RateLimiter.Reader.csproj
+++ b/RateLimiter.Reader/RateLimiter.Reader.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="Riok.Mapperly" Version="4.3.0" />
+        <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
     </ItemGroup>
 
 </Project>
