--- a/RateLimiter.Writer/appsettings.json
+++ b/RateLimiter.Writer/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "DatabaseSettings": {
-    "Uri": "mongodb://mongo:password@rate-limits-db-service:27017",
+    "Uri": "mongodb://limits-db:27017",
     "Database": "rateLimiterDB",
     "CollectionName": "rateLimits"
   }
