--- a/RateLimiter.Reader/appsettings.json
+++ b/RateLimiter.Reader/appsettings.json
@@ -23,7 +23,9 @@
     "GroupId": "rate-limiter-group"
   },
   "RedisSettings": {
-    "ConnectionString": "redis:6379",
-    "BlockExpirationMinutes": 5
+    "ConnectionString": "redis:6379"
+  },
+  "RateLimiterSettings": {
+    "BlockDurationMinutes": 5
   }
 }
