--- a/RateLimiter.Reader/docker-compose.yml
+++ b/RateLimiter.Reader/docker-compose.yml
@@ -21,3 +21,13 @@ services:
       - "6379:6379"
     networks:
       - highload
+  
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redisinsight
+    ports:
+      - "5540:5540"
+    networks:
+      - highload
+    depends_on:
+      - redis
