--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -13,5 +13,11 @@
   },
   "DatabaseSettings": {
     "ConnectionString": "User ID=postgres;Password=postgres;Host=users-db;Port=5432;Database=user-db;"
+  },
+  "RedisSettings": {
+    "ConnectionString": "redis:6379"
+  },
+  "GrpcSettings": {
+    "UserIdHeader": "user_id"
   }
 }
