--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="Riok.Mapperly" Version="4.2.1" ExcludeAssets="runtime" PrivateAssets="all" />
         <PackageReference Include="Npgsql" Version="9.0.3" />
+        <PackageReference Include="StackExchange.Redis" Version="2.10.1" />
         <PackageReference Include="xunit" Version="2.9.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4">
           <PrivateAssets>all</PrivateAssets>
