--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoFixture" Version="4.18.1" />
+        <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
