refactor: use cache settings

--- a/UserService/appsettings.json
+++ b/UserService/appsettings.json
@@ -19,5 +19,9 @@
   },
   "GrpcSettings": {
     "UserIdHeader": "user_id"
+  },
+  "CacheSettings": {
+    "AbsoluteExpirationMinutes": 60,
+    "SlidingExpirationMinutes": 10
   }
 }
